# jax-sbgeom

./: .gitignore  LICENSE  README.md  build_docs.sh  dagmc.h5m  pyproject.toml  pytest.ini  setup.py
.github/workflows/: docs-pages.yml
docs/: requirements.txt
docs/source/: api_reference.rst  coils.rst  conf.py  examples.rst  flux_surfaces.rst  index.rst
docs/source/_templates/: package.rst.jinja
docs/source/api/: jax_sbgeom.coils.base_coil.rst  jax_sbgeom.coils.biot_savart.rst  jax_sbgeom.coils.coil_meshing.rst  jax_sbgeom.coils.coil_winding_surface.rst  jax_sbgeom.coils.coilset.rst  jax_sbgeom.coils.discrete_coil.rst  jax_sbgeom.coils.fourier_coil.rst  jax_sbgeom.coils.rst  jax_sbgeom.flux_surfaces.convert_to_vmec.rst  jax_sbgeom.flux_surfaces.flux_surface_meshing.rst  jax_sbgeom.flux_surfaces.flux_surfaces_base.rst  jax_sbgeom.flux_surfaces.flux_surfaces_extended.rst  jax_sbgeom.flux_surfaces.flux_surfaces_utilities.rst  jax_sbgeom.flux_surfaces.rst  jax_sbgeom.interfaces.blanket_creation.rst  jax_sbgeom.interfaces.dagmc_interface.rst  jax_sbgeom.interfaces.plasma.rst  jax_sbgeom.interfaces.rst  jax_sbgeom.jax_utils.mesh.rst  jax_sbgeom.jax_utils.rst  (+7 more)
examples/: README.md  basic_example.py  coil_volumetric_mesh.ipynb  coils.ipynb  debug.py  field_line_tracing.py  flux_surfaces.ipynb  hcpb_blanket.json  just_test_once.py  openmc_helias5.ipynb  stellarator_paper_fig_13.ipynb  stellarator_paper_fig_2.ipynb  stellarator_paper_fig_3.ipynb  stellarator_paper_fig_4.ipynb  stellarator_paper_fig_5.ipynb  stellarator_paper_fig_7.ipynb  visual_tests.py
jax_sbgeom/: __init__.py
jax_sbgeom/coils/: __init__.py  base_coil.py  biot_savart.py  coil_meshing.py  coil_winding_surface.py  coilset.py  discrete_coil.py  fourier_coil.py
jax_sbgeom/flux_surfaces/: __init__.py  convert_to_VMEC.py  convert_to_vmec.py  flux_surface_meshing.py  flux_surfaces_base.py  flux_surfaces_extended.py  flux_surfaces_utilities.py
jax_sbgeom/interfaces/: blanket_creation.py  dagmc_interface.py  plasma.py
jax_sbgeom/jax_utils/: __init__.py  mesh.py  optimize.py  raytracing.py  splines.py  utils.py
tests/: conftest.py  generate_coil_artefacts.ipynb
tests/coils/: test_coils.py  test_coilset.py
tests/flux_surfaces/: flux_surface_base.py  test_flux_surface_base.py  test_flux_surface_base_data.py  test_flux_surface_base_extension.py  test_flux_surface_d_matrix.py  test_flux_surface_extension_fourier.py  test_flux_surface_utilities.py  test_layered_blanket.py
tests/utilities/: test_raytracing.py  test_splines.py  test_utilities.py
(+91 files in other folders)
